# IT4063C.github.io

./: .gitignore  404.html  Makefile  Pipfile  README.md  assignments.html  blog.html  course-notes.html  coursework.html  credits.html  docusaurus.config.js  index.html  instructor.html  opensearch.xml  package-lock.json  package.json  pyproject.toml  requirements.txt  search-index.json  search.html  settings.ini  sidebars.js  sidebarsLabs.js  sitemap.xml  slides.html  ta.html
.github/workflows/: main.yml
.github_archive/workflows/: deploy.yml
assets/css/: styles.0bbeeb1b.css  styles.1322df87.css  styles.35661dc0.css  styles.3f87eca7.css  styles.4d9e5ea5.css  styles.4f0d5564.css  styles.521b0141.css  (+11 more)
assignments/: python-exercises.html
blog/: archive.html  atom.xml  break-down-problems.html  github-actions-badge.html  rss.xml  tags.html  vscode-extensions.html
course-notes/: altair.html  data-analytics.html  dev-env.html  git.html  nb.html  python.html  refreshers.html
coursework/: assignments.html  lab-template.html  labs.html
docs/: course-notes.html  labs.html
guides/: FAQ.html  code-style-guide.html  code-style-guide.mdx  code-style.html  contribution.html  datasets.html  draft-code-style.html  env-setup.html  misc.html  resources.html
instructor/: code-snippets.html  datasets.html  datasets.md  index.md  links.html  links.md  weekly-modules.html
syllabus/: 7.calendar.mdx  8.resources.md  9.UC-policies.md  UC-policies.html  calendar.html  course-outline.html  grading.html  info.html  need-help.html  policies.html  resources.html  sla.html
(+2356 files in other folders)
